# keycloak-mcp

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: main.py
src/common/: config.py  const.py  logging_filters.py  server.py
src/middleware/: auth.py
src/tools/: __init__.py  authentication_management_tools.py  client_tools.py  group_tools.py  idp_tools.py  keycloak_client.py  realm_smtp_tools.py  realm_tools.py  role_tools.py  user_tools.py
tests/: test_connection.py  test_imports.py
