[project]
name = "keycloak-mcp"
version = "1.9.0"
description = "MCP server for Keycloak administration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "TETRA" },
    { name = "Ido Yudha (upstream author)" },
]
dependencies = [
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.27",
    "uvicorn>=0.49.0",
    "starlette>=1.0.1",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.14.2",
    "anyio>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "unit: Run unit tests",
    "integration: Run integration tests (requires live Keycloak)",
]
addopts = "-v"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): v{version}"
build_command = ""

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.17",
    "pre-commit>=3.0.0",
    "python-semantic-release>=10.0.0",
]
